Ensure buttons remain readable

--- a/public/colors.css
+++ b/public/colors.css
@@ -116,8 +116,10 @@
 
 .bg-true {
 	background: #00a81f !important;
+	color: white;
 }
 
 .bg-false {
 	background: #a81600 !important;
+	color: white;
 }
